# Personal-Research-Assistant

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  RENDER_DEPLOYMENT.md  WRAP.md  deploy.sh  exception.py  logger.py  pyproject.toml  render.yaml  requirements.in  requirements.txt
.github/workflows/: ci.yml
data/: .gitignore  processed_tickets.csv.dvc
notebooks/: notebook.ipynb
src/: main.py
src/agent/: core.py  test_agent.py
src/components/: data_transformation.py  model_trainer.py
src/tools/: test_tools.py  web_tool.py
tests/: test_smoke.py
utils_example/: LOGGER_USAGE.md  example_exceptions.py  example_usage.py  integration_example.py
